[package]
name = "sudorsa"
version = "0.1.0"
authors = ["haverzard"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "cli"
path = "src/cli.rs"

[[bin]]
name = "gui"
path = "src/gui.rs"

[dependencies]
atk = "^0"
gdk = "^0"
glib = "^0"
pamsm = "0.3.3"
rsa = "0.3.0"
rand = "0.7.3"
base64 = "0.12.2"
colour = "0.5.0"

[dependencies.gtk]
version = "0.8.1"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]